# pluralmatrix

./: .dockerignore  .env.example  .gitignore  CNAME  LICENSE  README.md  _config.yml  docker-compose.yml  docs-preview-start.sh  docs-preview-stop.sh  pk_dump_seraphim_sample.json  restart-stack.sh  setup.sh  stop-stack.sh  synapse-zero-flash.patch  synapse.Dockerfile  toggle-module.sh
.gemini/: GEMINI.md  install-hooks.sh
.gemini/plans/: DASHBOARD_PLAN.md  PLAN.md
_includes/: custom-head.html
app-service/: Dockerfile  docker-entrypoint.sh  jest.config.js  package-lock.json  package.json  seed-db.ts  tsconfig.json
app-service/client/: index.html  package-lock.json  package.json  tailwind.config.js
app-service/client/src/: App.tsx  SystemRedirector.tsx  index.css
app-service/prisma/: schema.prisma
app-service/src/: api.test.ts  auth.test.ts  auth.ts  bot.test.ts  bot.ts  cache.test.ts  commands.test.ts  e2e.test.ts  edit-proxy.test.ts  import.test.ts  import.ts  index.ts  roundtrip.test.ts
app-service/src/controllers/: authController.ts  gatekeeperController.ts  (+4 more)
pantalaimon/: pantalaimon.conf.example
pluralmatrix/: README.md  docker-compose.yml  restart-stack.sh
pluralmatrix/.gemini/: GEMINI.md
pluralmatrix/app-service/: Dockerfile  jest.setup.ts  package-lock.json  package.json  seed-db.ts
pluralmatrix/pantalaimon/: pantalaimon.conf
rust-crypto-helper/: Cargo.toml  README.md
rust-crypto-helper/src/: main.rs
synapse/config/: app-service-registration.yaml.example  homeserver.yaml.example
synapse/modules/: plural_gatekeeper.py
(+67 files in other folders)
