[package]
name = "rust-crypto-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
matrix-sdk-crypto = "0.9.0"
matrix-sdk-sqlite = { version = "0.9.0", features = ["crypto-store"] }
serde_json = "1.0"
ruma = { version = "0.12.3", features = ["client-api"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"
